--- a/deployment.yml
+++ b/deployment.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: demo-deployment
+  namespace: demo-namespace
   labels:
     app: demo-deployment
 spec:
@@ -16,7 +17,7 @@ spec:
     spec:
       containers:
       - name: demo
-        image: demo:1.0
+        image: web-app:latest
         ports:
         - containerPort: 8081
 
@@ -26,6 +27,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: demo-service
+  namespace: demo-namespace
 spec:
   ports:
   - port: 80
