--- a/deployment.yml
+++ b/deployment.yml
@@ -22,7 +22,7 @@ spec:
         ports:
         - containerPort: 8081
         volumeMounts:
-        - { name: data, mountPath: /config }
+        - { name: data, mountPath: /tmp/example }
       volumes:
       - name: data
         configMap:
