--- a/development/catalog-service.yml
+++ b/development/catalog-service.yml
@@ -1,36 +1,36 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: argo-demo-deployment
+  name: catalog-service-deployment
   namespace: argo-demo-namespace
   labels:
-    app: argo-demo-deployment
+    app: catalog-service-deployment
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: argo-demo-deployment
+      app: catalog-service-deployment
   template:
     metadata:
       labels:
-        app: argo-demo-deployment
+        app: catalog-service-deployment
     spec:
       containers:
-        - name: argo
-          image: ghcr.io/just-styx/argo:1.3
+        - name: catalog-service
+          image: ghcr.io/just-styx/catalog-service-demo:1.0
           imagePullPolicy: Always
           ports:
-            - containerPort: 8081
+            - containerPort: 8082
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: argo-demo-service
+  name: catalog-service-service
   namespace: argo-demo-namespace
 spec:
   ports:
     - port: 80
-      targetPort: 8081
+      targetPort: 8082
   selector:
-    app: argo-demo-deployment
+    app: catalog-service-deployment
