--- a/development/catalog-service-v2.yml
+++ b/development/catalog-service-v2.yml
@@ -5,18 +5,18 @@ metadata:
   namespace: argo-demo-namespace
   labels:
     app: catalog-service-deployment
-    version: normal
+    version: gold
 spec:
   replicas: 2
   selector:
     matchLabels:
       app: catalog-service-deployment
-      version: normal
+      version: gold
   template:
     metadata:
       labels:
         app: catalog-service-deployment
-        version: normal
+        version: gold
     spec:
       containers:
         - name: catalog-service
@@ -25,15 +25,15 @@ spec:
           ports:
             - containerPort: 8082
 
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: catalog-service-service
-  namespace: argo-demo-namespace
-spec:
-  ports:
-    - port: 80
-      targetPort: 8082
-  selector:
-    app: catalog-service-deployment
+#---
+#apiVersion: v1
+#kind: Service
+#metadata:
+#  name: catalog-service-service
+#  namespace: argo-demo-namespace
+#spec:
+#  ports:
+#    - port: 80
+#      targetPort: 8082
+#  selector:
+#    app: catalog-service-deployment
