--- a/development/catalog-destination-rule.yml
+++ b/development/catalog-destination-rule.yml
@@ -1,3 +1,6 @@
+
+# DestinationRule to differentiate between gold and normal customers.
+
 apiVersion: networking.istio.io/v1beta1
 kind: DestinationRule
 metadata:
