--- a/c_b_git/gitops-k8s/chalk-board-secret.yml
+++ b/c_b_git/gitops-k8s/chalk-board-secret.yml
@@ -8,8 +8,8 @@ data:
   REDIS_PASSWORD: "cGFzc3dvcmQ="
   CHALK_BOARD_DATABASE_PASSWORD: "cGFzc3dvcmQ="
   KEYCLOAK_PASSWORD: "cGFzc3dvcmQ="
-  KEYCLOAK_USERNAME: "username"
-  AUTH_CLIENT_SECRET: "Z3VBSVFMMjFpUWN6Z3lsTzBrQVlZNDF1QnVWR2h5a2E="
+  KEYCLOAK_USERNAME: "admin"
+  AUTH_CLIENT_SECRET: "M1FhSU1Jazg3UDJ3dzZQMEZ3dmpLdk8wY3JXU3RJVjg="
   GRAFANA_PASSWORD: "cGFzc3dvcmQ="
   POSTGRES_USERNAME: "username"
   POSTGRES_PASSWORD: "cGFzc3dvcmQ="
