--- a/c_b_git/gitops-k8s/chalk-keycloak-deployment.yml
+++ b/c_b_git/gitops-k8s/chalk-keycloak-deployment.yml
@@ -22,25 +22,17 @@ spec:
                 name: chalkboard-shared-config # Inject all variables from the ConfigMap
           ports:
             - containerPort: 7080
-#          readinessProbe:
-#            httpGet:
-#              path: /health/ready
-#              port: 7080
-#            initialDelaySeconds: 30
-#            periodSeconds: 5
-#            failureThreshold: 3
-#          livenessProbe:
-#            exec:
-#              command:
-#                - curl
-#                - -f
-#                - http://localhost:7080/health/live
-#            initialDelaySeconds: 60
-#            periodSeconds: 30
-#            failureThreshold: 3
-          # Note: The healthcheck in the original request uses a different port and path (localhost:8080).
-          # The readiness probe here uses port 7080 to match the Keycloak config.
-          # You should adjust your Keycloak config or the probe path if necessary.
+          volumeMounts:
+            - name: realm-config-volume
+              mountPath: /opt/keycloak/data/import/realm-config.json
+              subPath: realm-config.json
+      volumes:
+        - name: realm-config-volume
+          configMap:
+            name: chalk-keycloak-realm-config
+            items:
+              - key: realm-config.json
+                path: realm-config.json
 
 ---
 # Kubernetes Service to expose the Keycloak deployment
