modified manifest files

--- a/c_b_git/gitops-k8s/chalk-board-secret.yml
+++ b/c_b_git/gitops-k8s/chalk-board-secret.yml
@@ -8,9 +8,9 @@ data:
   REDIS_PASSWORD: "cGFzc3dvcmQ="
   CHALK_BOARD_DATABASE_PASSWORD: "cGFzc3dvcmQ="
   KEYCLOAK_PASSWORD: "cGFzc3dvcmQ="
-  KEYCLOAK_USERNAME: "admin"
+  KEYCLOAK_USERNAME: "YWRtaW4="
   AUTH_CLIENT_SECRET: "M1FhSU1Jazg3UDJ3dzZQMEZ3dmpLdk8wY3JXU3RJVjg="
   GRAFANA_PASSWORD: "cGFzc3dvcmQ="
-  POSTGRES_USERNAME: "username"
+  POSTGRES_USERNAME: "dXNlcm5hbWU="
   POSTGRES_PASSWORD: "cGFzc3dvcmQ="
   PGPASSWORD: "cGFzc3dvcmQ="
