--- a/c_b_git/gitops-k8s/tempo-deployment-service.yml
+++ b/c_b_git/gitops-k8s/tempo-deployment-service.yml
@@ -61,6 +61,8 @@ spec:
         - name: tempo-config-volume
           configMap:
             name: tempo-config
+        - name: tempo-data
+          emptyDir: { }
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
