--- a/c_b_git/gitops-k8s/jaeger-deployment-service.yml
+++ b/c_b_git/gitops-k8s/jaeger-deployment-service.yml
@@ -37,7 +37,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: jaeger-service
+  name: jaeger-all-in-one
   namespace: chalk-board-namespace
   labels:
     app: jaeger
