--- a/c_b_git/gitops-k8s/zipkin-deployment-service.yml
+++ b/c_b_git/gitops-k8s/zipkin-deployment-service.yml
@@ -35,7 +35,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: zipkin-service
+  name: zipkin-all-in-one
   namespace: chalk-board-namespace
   labels:
     app: zipkin
